syntax = "proto3";

package video_messaging_service;

service VideoMessagingService {
  rpc UploadVideoMessage (stream VideoMessageChunk) returns (VideoMessageMetadata) {}
  rpc GetVideoMessage (GetVideoMessageRequest) returns (stream VideoMessageChunk) {}
  rpc ListVideoMessages (ListVideoMessagesRequest) returns (ListVideoMessagesResponse) {}
  rpc DeleteVideoMessage (DeleteVideoMessageRequest) returns (DeleteVideoMessageResponse) {}
  rpc SearchVideoMessages (SearchVideoMessagesRequest) returns (SearchVideoMessagesResponse) {}
  rpc GetVideoMessageMetadata (GetVideoMessageMetadataRequest) returns (VideoMessageMetadata) {}
  
}

message VideoMessageChunk {
  string message_id = 1;  // Unique identifier for the video message
  int32 chunk_index = 2;  // Index of this data chunk
  bytes data = 3;         // The raw video/audio data
}

message VideoMessageMetadata {
  string id = 1; // Updated field name
  string title = 2; // New field
  string description = 3; // New field
  string created_at = 4; // New field
  string created_by = 5; // New field
  int64 size = 6; // New field
  int32 duration = 7; // New field
  string sender_id = 8; // Renamed field
  string recipient_id = 9; // Renamed field
  int64 timestamp = 10; // Renamed field
  int32 target_duration_seconds = 11; // Renamed field
  int32 actual_duration_seconds = 12; // Renamed field
  bytes thumbnail = 13; // Renamed field
}

message GetVideoMessageRequest {
  string message_id = 1;
}

message GetVideoMessageMetadataRequest {
  string message_id = 1;
}



message ListVideoMessagesRequest {
  // Add filtering options here (e.g., recipient_id, conversation_id, date ranges)
  string recipient_id = 1;
  int32 page_size = 2;
  string page_token = 3;
  string conversation_id = 4;
  int64 start_time = 5;
  int64 end_time = 6;
  int32 page = 7;
  string sort_by = 8;
  string sort_order = 9;
}

message ListVideoMessagesResponse {
  repeated VideoMessageMetadata messages = 1;
  int32 total_count = 2;
}

message DeleteVideoMessageRequest {
  string message_id = 1;
}

message DeleteVideoMessageResponse {
  bool success = 1;
}


message SearchVideoMessagesRequest {
  string query = 1;
  string recipient_id = 2;
  int32 page_size = 3;
  string page_token = 4;
  int64 start_time = 5;
  int64 end_time = 6;
}

message SearchVideoMessagesResponse {
  repeated VideoMessageMetadata messages = 1;
  int32 total_count = 2;
}
