syntax = "proto3";

package video_messaging;

service VideoMessaging {
  rpc UploadVideoMessage (stream VideoMessageChunk) returns (VideoMessageMetadata) {}
  rpc GetVideoMessage (GetVideoMessageRequest) returns (stream VideoMessageChunk) {}
  rpc ListVideoMessages (ListVideoMessagesRequest) returns (ListVideoMessagesResponse) {}
  rpc DeleteVideoMessage (DeleteVideoMessageRequest) returns (DeleteVideoMessageResponse) {}
  rpc SearchVideoMessages (SearchVideoMessagesRequest) returns (SearchVideoMessagesResponse) {}
}

message VideoMessageChunk {
  string message_id = 1;  // Unique identifier for the video message
  int32 chunk_index = 2;  // Index of this data chunk
  bytes data = 3;         // The raw video/audio data
}

message VideoMessageMetadata {
  string message_id = 1; 
  string sender_id = 2;
  string recipient_id = 3; 
  int64 timestamp = 4;
  int32 target_duration_seconds = 5; // Target duration the user intended
  int32 actual_duration_seconds = 6; // Actual recorded duration
  bytes thumbnail = 7;  

}

message GetVideoMessageRequest {
  string message_id = 1;
}

message ListVideoMessagesRequest {
  // Add filtering options here (e.g., recipient_id, conversation_id, date ranges)
  string recipient_id = 1;
  int32 page_size = 2;
  string page_token = 3;
  string conversation_id = 4;
  int64 start_time = 5;
  int64 end_time = 6;
}

message ListVideoMessagesResponse {
  repeated VideoMessageMetadata messages = 1;
}